<resources>
    <string name="app_name">AADisplay</string>
    <string name="unknown_error">unknown error</string>
    <string name="details">details</string>
    <string name="settings">settings</string>
    <string name="xposeddescription">AADisplay</string>
    <string name="info_system_version">System Version</string>
    <string name="info_root_privilege">Root Privilege</string>
    <string name="activated">Activated</string>
    <string name="need_reboot">Need Reboot</string>
    <string name="need_LSPosed">Need LSPosed</string>
    <string name="not_activated">Not Activated</string>
    <string name="reboot">Reboot</string>
    <string name="SettingsCategoryBasic">Basic Settings</string>
    <string name="SettingsAutoOpenTitle">Auto Open</string>
    <string name="SettingsAutoOpenSummary">Automatically open app after connecting to Android Auto</string>
    <string name="SettingsAutoOpenPackageName">Default Launch Package</string>
    <string name="SettingsAutoOpenPackageSummary">App launched on virtual display creation (startup app)</string>
    <string name="SettingsHomePackageTitle">Home Package</string>
    <string name="SettingsHomePackageSummary">Launcher for Home button. Must be different from phone launcher.</string>
    <string name="SettingsAndroidAutoDpi">Android Auto DPI</string>
    <string name="SettingsAndroidAutoDpiSummary">DPI for AA rendering (0 = auto from resolution)</string>
    <string name="SettingsVirtualDisplayDpi">Virtual Display DPI</string>
    <string name="SettingsVirtualDisplayDpiSummary">DPI for virtual display (0 = auto from resolution)</string>
    <string name="SettingsDestructionDelay">Delay Destroy Time</string>
    <string name="SettingsReplaceLockScreenTitle">Screen Off Only</string>
    <string name="SettingsReplaceLockScreenSummary">Power button replaces screen off only</string>
    <string name="SettingsCloseLauncherDashboard">Prevent AA Split Screen Toggle</string>
    <string name="SettingsCloseLauncherDashboardSummary">ON = full takeover, OFF = widget mode. AA will restart on change.</string>
    <string name="SettingsShowFloatingController">Show Floating Controller</string>
    <string name="SettingsShowFloatingControllerSummary">Show floating overlay buttons on phone screen</string>
    <string name="SettingsForceRightAngle">Force Right Angle</string>
    <string name="SettingsImePolicy">IME Policy</string>
    <string name="SettingsImeDisplayVirtualScreen">Virtual Screen</string>
    <string name="SettingsImeDisplayMainScreen">Main Screen</string>
    <string name="SettingsVoiceAssistantShell">Voice Assistant Shell</string>
    <string name="SettingsCategoryShell">Shell Commands</string>
    <string name="SettingsShellCreateVirtualDisplayBefore">Execute Before Creating Virtual Display</string>
    <string name="SettingsShellDestroyVirtualDisplayAfter">Execute After Destroying Virtual Display</string>
    <string name="SettingsCategoryPhysicalBtn">Physical Buttons</string>
    <string name="SettingsCategoryAndroidAutoProps">Android Auto Config</string>
    <string name="props">properties</string>
</resources>